Made graph configurable

--- a/frontend/src/app/messages/message.component.html
+++ b/frontend/src/app/messages/message.component.html
@@ -20,10 +20,19 @@
             <div>
                 <fusioncharts [chartConfig]=chartConfig [dataSource]=dataSource ></fusioncharts>
             </div>
-            <div class="stemmen">
-                <button class="btn btn-primary" (click)="onStemmen(0)">Ja</button>
-                <button class="btn btn-primary" (click)="onStemmen(1)">Beetje</button>
-                <button class="btn btn-primary" (click)="onStemmen(2)">Nee</button>
+            <div class="stemmenConfig">
+                <label>Chart type</label>
+                <mat-form-field>
+                    <select matNativeControl required #t (change)="onStemmenConfig(t.value)">
+                        <option>select chart type</option>
+                        <option *ngFor="let chartType of chartTypes" [value]="chartType.index">{{chartType.name}}</option>
+                    </select>
+                </mat-form-field>
+            </div>
+            <div class="stemmenButtons">
+                <button class="btn btn-primary" *ngFor="let columnData of dataSource.data; let i = index" (click)="onStemmen(i)">{{columnData.label}}</button>
+                <!-- <button class="btn btn-primary" (click)="onStemmen(1)">Beetje</button>
+                <button class="btn btn-primary" (click)="onStemmen(2)">Nee</button> -->
             </div>
         </div>
     </div>
