--- a/frontend/src/app/messages/message.component.html
+++ b/frontend/src/app/messages/message.component.html
@@ -1,64 +1,41 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <app-user></app-user>
+<mat-tab-group>
+    <mat-tab label="Status">
+        <div id="indicator" class="{{connectionStatus$|async}}"></div>
+        <div>Connection status: <span id="status-label">{{connectionStatus$|async}}</span></div>
+        <div>
+            <button class="btn" (click)="rxStompService.activate()">Activate</button>
+            <button class="btn" (click)="rxStompService.deactivate()">DeActivate</button>
+            <button class="btn" (click)="rxStompService.stompClient.forceDisconnect()">Simulate Error</button>
+            <h2>Error message</h2>
+            {{errorMessage}}
         </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div id="status">
-                <div id="indicator" class="{{connectionStatus$|async}}"></div>
-                <div>Connection status: <span id="status-label">{{connectionStatus$|async}}</span></div>
-                <div>
-                    <button class="btn" (click)="rxStompService.activate()">Activate</button>
-                    <button class="btn" (click)="rxStompService.deactivate()">DeActivate</button>
-                    <button class="btn" (click)="rxStompService.stompClient.forceDisconnect()">Simulate Error</button>
-                    <h2>Error message</h2>
-                    {{errorMessage}}
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <app-stemmen></app-stemmen>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div id="messages">
-                <button class="btn btn-primary" (click)="onSendMessage()">Send Test Message</button>
-                <h2>Received messages</h2>
-                <ol>
-                    <!-- we will use Angular binding to populate list of messages -->
-                    <li class="message" *ngFor="let message of receivedMessages">{{message}}</li>
-                </ol>
-            </div>
-        </div>
-        <div class="col">
-            <app-news></app-news>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div id="count">
-                <button class="btn btn-primary" (click)="onCount(true)">Up</button>
-                <button class="btn btn-primary" (click)="onCount(false)">Down</button>
-                <h2>Counter</h2>
-                <fusioncharts
-                    width="450"
-                    height="250"
-                    type="AngularGauge"
-                    [dataSource]="speedSource"
-                    >
-                </fusioncharts>
-            </div>
-        </div>
-        <div class="col">
-            <div id="news">
-                <h2>Logged in users:</h2>
-                <ul>
-                    <li class="users" *ngFor="let userId of this.loggedInUsers">{{userId}}</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+    </mat-tab>
+    <mat-tab label="User">
+        <app-user></app-user>
+        <h2>Logged in users:</h2>
+        <ul>
+            <li class="users" *ngFor="let userId of this.loggedInUsers">{{userId}}</li>
+        </ul>
+
+    </mat-tab>
+    <mat-tab label="Stemmen">
+        <app-stemmen></app-stemmen>
+    </mat-tab>
+    <mat-tab label="Messages">
+        <button class="btn btn-primary" (click)="onSendMessage()">Send Test Message</button>
+        <h2>Received messages</h2>
+        <ol>
+            <!-- we will use Angular binding to populate list of messages -->
+            <li class="message" *ngFor="let message of receivedMessages">{{message}}</li>
+        </ol>
+    </mat-tab>
+    <mat-tab label="Nieuws">
+        <app-news></app-news>
+    </mat-tab>
+    <mat-tab label="Snelheid">
+        <button class="btn btn-primary" (click)="onCount(true)">Up</button>
+        <button class="btn btn-primary" (click)="onCount(false)">Down</button>
+        <h2>Counter</h2>
+        <fusioncharts width="450" height="250" type="AngularGauge" [dataSource]="speedSource">
+        </fusioncharts>
+    </mat-tab>
